[Refactor] MediaTypeParserRegistry to MediaTypeRegistry (#8940)
This commit rote refactors MediaTypeParserRegistry to MediaTypeRegistry
to make the class naming align with the intention of the logic. The
MediaTypeRegistry is a mechanism for downstream extensions to register
concrete MediaTypes thus having Parser in the name is unneeded.

Signed-off-by: Nicholas Walter Knize <nknize@apache.org>